# PixelEraserpro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CanvasWidget.h  ExportDialog.h  HistoryManager.h  ImageProcessor.h  MainWindow.h  ResizeDialog.h  ToolManager.h  UpdateChecker.h  Upscaler.h
resources/: resources.qrc
src/: CanvasWidget.cpp  ExportDialog.cpp  HistoryManager.cpp  ImageProcessor.cpp  MainWindow.cpp  ResizeDialog.cpp  ToolManager.cpp  UpdateChecker.cpp  Upscaler.cpp  main.cpp
